attached_assets/Pasted-Checking-cubiomes-library-Library-already-built-skipping-compilation-Compiling-verify-build-v-1740467544357.txt
Checking cubiomes library...
Library already built, skipping compilation
Compiling verify_build...
verify_build.c:256:3: error: conflicting types for ‘StructureRequirement’; have ‘struct <anonymous>’
  256 | } StructureRequirement;
      |   ^~~~~~~~~~~~~~~~~~~~
verify_build.c:192:3: note: previous declaration of ‘StructureRequirement’ with type ‘StructureRequirement’
  192 | } StructureRequirement;
      |   ^~~~~~~~~~~~~~~~~~~~
verify_build.c:259:1: error: unknown type name ‘ClusterRequirement’; did you mean ‘StructureRequirement’?
  259 | ClusterRequirement clusterReq = {
      | ^~~~~~~~~~~~~~~~~~
      | StructureRequirement
verify_build.c:260:5: error: field name not in record or union initializer
  260 |     .enabled         = false,
      |     ^
verify_build.c:260:5: note: (near initialization for ‘clusterReq’)
verify_build.c:261:5: error: field name not in record or union initializer
  261 |     .clusterDistance = 32,
      |     ^
verify_build.c:261:5: note: (near initialization for ‘clusterReq’)
verify_build.c:261:24: warning: excess elements in scalar initializer
  261 |     .clusterDistance = 32,
      |                        ^~
verify_build.c:261:24: note: (near initialization for ‘clusterReq’)
verify_build.c:262:5: error: field name not in record or union initializer
  262 |     .structureTypes  = NULL,
      |     ^
verify_build.c:262:5: note: (near initialization for ‘clusterReq’)
verify_build.c:262:24: warning: excess elements in scalar initializer
  262 |     .structureTypes  = NULL,
      |                        ^~~~
verify_build.c:262:24: note: (near initialization for ‘clusterReq’)
verify_build.c:263:5: error: field name not in record or union initializer
  263 |     .count           = 0,
      |     ^
verify_build.c:263:5: note: (near initialization for ‘clusterReq’)
verify_build.c:263:24: warning: excess elements in scalar initializer
  263 |     .count           = 0,
      |                        ^
verify_build.c:263:24: note: (near initialization for ‘clusterReq’)
verify_build.c:264:5: error: field name not in record or union initializer
  264 |     .minClusterSize  = 2
      |     ^
verify_build.c:264:5: note: (near initialization for ‘clusterReq’)
verify_build.c:264:24: warning: excess elements in scalar initializer
  264 |     .minClusterSize  = 2
      |                        ^
verify_build.c:264:24: note: (near initialization for ‘clusterReq’)
verify_build.c: In function ‘scanSeed’:
verify_build.c:616:19: error: request for member ‘enabled’ in something not a structure or union
  616 |     if (clusterReq.enabled) {
      |                   ^
verify_build.c:624:39: error: request for member ‘count’ in something not a structure or union
  624 |         for (int i = 0; i < clusterReq.count; i++) {
      |                                       ^
verify_build.c:625:35: error: request for member ‘structureTypes’ in something not a structure or union
  625 |             int stype = clusterReq.structureTypes[i];
      |                                   ^
verify_build.c:686:52: error: request for member ‘clusterDistance’ in something not a structure or union
  686 |                     if (dx*dx + dz*dz <= clusterReq.clusterDistance * clusterReq.clusterDistance) {
      |                                                    ^
verify_build.c:686:81: error: request for member ‘clusterDistance’ in something not a structure or union
  686 | if (dx*dx + dz*dz <= clusterReq.clusterDistance * clusterReq.clusterDistance) {
      |                                                             ^

verify_build.c:716:43: error: request for member ‘minClusterSize’ in something not a structure or union
  716 |                 if (groupSize < clusterReq.minClusterSize) {
      |                                           ^
verify_build.c:875:28: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  875 |                     if (req->nextToBiomeCount > 0 && req->biomeProximity >= 0) {
      |                            ^~
verify_build.c:875:57: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  875 |                     if (req->nextToBiomeCount > 0 && req->biomeProximity >= 0) {
      |                                                         ^~
verify_build.c:878:43: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  878 |                         for (int dx = -req->biomeProximity; dx <= req->biomeProximity && !nearRequiredBiome; dx++) {
      |                                           ^~
verify_build.c:878:70: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  878 |                for (int dx = -req->biomeProximity; dx <= req->biomeProximity && !nearRequiredBiome; dx++) {
      |                                                             ^~

verify_build.c:879:47: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  879 |                             for (int dz = -req->biomeProximity; dz <= req->biomeProximity; dz++) {
      |                                               ^~
verify_build.c:879:74: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  879 |                for (int dz = -req->biomeProximity; dz <= req->biomeProximity; dz++) {
      |                                                             ^~

verify_build.c:882:40: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  882 |                                 if (req->structureType == 19 || req->structureType == 17 ||
      |                                        ^~
verify_build.c:882:68: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  882 |                          if (req->structureType == 19 || req->structureType == 17 ||
      |                                                             ^~

verify_build.c:883:40: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  883 |                                     req->structureType == 15 || req->structureType == 14 ||
      |                                        ^~
verify_build.c:883:68: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  883 |                              req->structureType == 15 || req->structureType == 14 ||
      |                                                             ^~

verify_build.c:884:40: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  884 |                                     req->structureType == 11) {
      |                                        ^~
verify_build.c:890:56: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  890 |                                 for (int i = 0; i < req->nextToBiomeCount; i++) {
      |                                                        ^~
verify_build.c:891:58: error: invalid type argument of ‘->’ (have ‘StructureRequirement’)
  891 |                                     if (checkBiome == req->nextToBiomes[i]) {
      |                                                          ^~
verify_build.c: In function ‘parseParameterLine’:
verify_build.c:1137:31: error: request for member ‘enabled’ in something not a structure or union
 1137 |                     clusterReq.enabled = true;
      |                               ^
verify_build.c:1139:31: error: request for member ‘enabled’ in something not a structure or union
 1139 |                     clusterReq.enabled = false;
      |                               ^
verify_build.c:1158:31: error: request for member ‘structureTypes’ in something not a structure or union
 1158 |                     clusterReq.structureTypes = realloc(clusterReq.structureTypes, (clusterReq.count+1)*sizeof(int));
      |                               ^
verify_build.c:1158:67: error: request for member ‘structureTypes’ in something not a structure or union
 1158 |               clusterReq.structureTypes = realloc(clusterReq.structureTypes, (clusterReq.count+1)*sizeof(int));
      |                                                             ^

verify_build.c:1158:95: error: request for member ‘count’ in something not a structure or union
 1158 | uctureTypes = realloc(clusterReq.structureTypes, (clusterReq.count+1)*sizeof(int));
      |                                                             ^

verify_build.c:1159:31: error: request for member ‘structureTypes’ in something not a structure or union
 1159 |                     clusterReq.structureTypes[clusterReq.count] = stype;
      |                               ^
verify_build.c:1159:57: error: request for member ‘count’ in something not a structure or union
 1159 |                     clusterReq.structureTypes[clusterReq.count] = stype;
      |                                                         ^
verify_build.c:1160:31: error: request for member ‘count’ in something not a structure or union
 1160 |                     clusterReq.count++;
      |                               ^
verify_build.c:1168:27: error: request for member ‘clusterDistance’ in something not a structure or union
 1168 |                 clusterReq.clusterDistance = dist;
      |                           ^
verify_build.c:1174:27: error: request for member ‘minClusterSize’ in something not a structure or union
 1174 |                 clusterReq.minClusterSize = sz;
      |                           ^
